[gd_scene load_steps=9 format=2]

[ext_resource path="res://resources/tres/enemy_display.tres" type="StyleBox" id=1]
[ext_resource path="res://nodes/UI/battle/enemy_display.gd" type="Script" id=2]
[ext_resource path="res://nodes/UI/bar_complex.tscn" type="PackedScene" id=3]
[ext_resource path="res://resources/fonts/Magero.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://nodes/UI/battle/AD.tscn" type="PackedScene" id=5]
[ext_resource path="res://nodes/UI/battle/message_display.tscn" type="PackedScene" id=6]
[ext_resource path="res://resources/tres/fonts/std_font_big.tres" type="DynamicFont" id=7]

[sub_resource type="DynamicFont" id=1]
size = 10
outline_size = 1
outline_color = Color( 0.0862745, 0.858824, 0.878431, 0.231961 )
use_mipmaps = true
font_data = ExtResource( 4 )

[node name="EnemyDisplay" type="Panel"]
self_modulate = Color( 1, 1, 1, 0.788235 )
margin_right = 200.0
margin_bottom = 32.0
custom_styles/panel = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="ComplexBar" parent="." instance=ExtResource( 3 )]
margin_left = 10.0
margin_top = 19.0
margin_right = 140.0
margin_bottom = 30.0

[node name="Label" type="Label" parent="."]
margin_left = 10.0
margin_right = 170.0
margin_bottom = 19.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 7 )
text = "12345678901234567890"
valign = 1
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Button" type="Button" parent="."]
visible = false
margin_right = 260.0
margin_bottom = 30.0
flat = true

[node name="Status" type="Label" parent="."]
margin_left = 10.0
margin_top = 14.0
margin_right = 190.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AD" parent="." instance=ExtResource( 5 )]
margin_left = 180.0
margin_top = 4.0
margin_right = 196.0
margin_bottom = 20.0

[node name="MessageDisplay" parent="." instance=ExtResource( 6 )]
margin_top = -30.0
margin_right = 260.0
margin_bottom = 0.0

[node name="EffectHook" type="Position2D" parent="."]
position = Vector2( 130, 20 )
[connection signal="mouse_entered" from="." to="." method="_on_EnemyDisplay_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_EnemyDisplay_mouse_exited"]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
